fixed style, dynamic divs

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 		
 		<div class="content">
 			<div class="col span_1_of_4">
-				<div class="user" id=tweetd>@User123</div>
-				<div class="text" id=tweettext>This is placeholder text, it will be changed.</div>
-				<div class="date" id=tweetdate>2:53 PM - September 5, 2016</div>
+				<div class="user" id=tweetd></div>
+				<div class="text" id=tweettext></div>
+				<div class="date" id=tweetdate></div>
 			</div>
 		</div>
 		
