fixed style, dynamic divs, fixed crashing

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 		
 		<div class="content">
 			<div class="col span_1_of_4">
-				<div class="user" id=tweetd></div>
-				<div class="text" id=tweettext></div>
-				<div class="date" id=tweetdate></div>
+				<div class="user" id="tweetd"></div>
+				<div class="text" id="tweettext"></div>
+				<div class="date" id="tweetdate"></div>
 			</div>
 		</div>
 		
